<?xml version="1.0" encoding="UTF-8"?>

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-parent</artifactId>
        <version>34</version>
        <relativePath/>
    </parent>

    <groupId>org.apache.maven.extensions</groupId>
    <artifactId>maven-build-cache-extension</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Apache Maven Build Cache Extension</name>
    <inceptionYear>2021</inceptionYear>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <classWorldsVersion>2.6.0</classWorldsVersion>
        <maven3Version>3.9.0-SNAPSHOT</maven3Version>
        <maven4Version>4.0.0-alpha-1-SNAPSHOT</maven4Version>

        <formatter-maven-plugin.version>2.17.0</formatter-maven-plugin.version>
        <impsort-maven-plugin.version>1.6.2</impsort-maven-plugin.version>

        <commonsCliVersion>1.4</commonsCliVersion>
        <commonsLangVersion>3.12.0</commonsLangVersion>
        <junitVersion>5.8.1</junitVersion>
        <mockitoVersion>3.2.0</mockitoVersion>
        <plexusUtilsVersion>3.4.1</plexusUtilsVersion>
        <wagonVersion>3.4.3</wagonVersion>
        <securityDispatcherVersion>2.0</securityDispatcherVersion>
        <cipherVersion>2.0</cipherVersion>
        <modelloVersion>1.11</modelloVersion>
        <jxpathVersion>1.3</jxpathVersion>
        <resolverVersion>1.7.2</resolverVersion>
        <slf4jVersion>1.7.32</slf4jVersion>
        <xmlunitVersion>2.6.4</xmlunitVersion>
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
        <!-- Control the name of the distribution and information output by mvn -->
        <maven.site.path>ref/caching-LATEST</maven.site.path>
        <project.build.outputTimestamp>2021-04-05T08:12:18Z</project.build.outputTimestamp>
    </properties>

    <distributionManagement>
        <site>
            <id>apache.website</id>
            <url>scm:svn:https://svn.apache.org/repos/asf/maven/website/components/${maven.site.path}</url>
        </site>
  </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>${maven4Version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>zero-allocation-hashing</artifactId>
            <version>0.9</version>
        </dependency>
        <dependency>
            <groupId>com.github.albfernandez</groupId>
            <artifactId>juniversalchardet</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commonsLangVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
            <version>${plexusUtilsVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.wagon</groupId>
            <artifactId>wagon-http</artifactId>
            <version>${wagonVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.resolver</groupId>
            <artifactId>maven-resolver-util</artifactId>
            <version>${resolverVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-verifier</artifactId>
            <version>1.7.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>.asf.yaml</exclude>
                        <exclude>src/test/resources*/**</exclude>
                        <exclude>src/test/projects/**</exclude>
                        <exclude>src/test/remote-repo/**</exclude>
                        <exclude>src/build/maven-header.txt</exclude>
                        <exclude>.gitmodules</exclude>
                        <exclude>maven/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter-maven-plugin.version}</version>
                <configuration>
                    <configFile>${maven.multiModuleProjectDirectory}/src/build/eclipse-formatter-config.xml</configFile>
                    <skip>${format.skip}</skip>
                    <lineEnding>KEEP</lineEnding>
                    <cachedir>${project.build.directory}/cache</cachedir>
                </configuration>
                <executions>
                    <execution>
                        <id>format</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>impsort-maven-plugin</artifactId>
                <version>${impsort-maven-plugin.version}</version>
                <configuration>
                    <removeUnused>true</removeUnused>
                    <staticAfter>true</staticAfter>
                    <lineEnding>KEEP</lineEnding>
                    <skip>${format.skip}</skip>
                    <cachedir>${project.build.directory}/cache</cachedir>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-utils</artifactId>
                        <version>3.4.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>sort-imports</id>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>animal-sniffer-maven-plugin</artifactId>
                <version>1.20</version>
                <configuration>
                    <signature>
                        <groupId>org.codehaus.mojo.signature</groupId>
                        <artifactId>java18</artifactId>
                        <version>1.0</version>
                    </signature>
                </configuration>
                <executions>
                    <execution>
                        <id>check-java-compat</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <violationSeverity>info</violationSeverity>
                    <suppressionsLocation>${maven.multiModuleProjectDirectory}/src/build/checkstyle-suppressions.xml</suppressionsLocation>
                    <headerLocation>${maven.multiModuleProjectDirectory}/src/build/maven-header.txt</headerLocation>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.41.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.shared</groupId>
                        <artifactId>maven-shared-resources</artifactId>
                        <version>3</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.modello</groupId>
                <artifactId>modello-maven-plugin</artifactId>
                <configuration>
                    <models>
                        <model>src/main/mdo/cache-config.mdo</model>
                        <model>src/main/mdo/cache-build.mdo</model>
                        <model>src/main/mdo/cache-diff.mdo</model>
                        <model>src/main/mdo/cache-report.mdo</model>
                    </models>
                    <version>1.0.0</version>
                </configuration>
                <executions>
                    <execution>
                        <id>modello-cache</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                            <goal>xpp3-reader</goal>
                            <goal>xpp3-writer</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>modello-cache-xsd</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>xsd</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/generated-resources/modello</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>modello-site-docs</id>
                        <phase>pre-site</phase>
                        <goals>
                            <goal>xdoc</goal>
                            <goal>xsd</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>add-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${basedir}/target/generated-resources/modello</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>-Xmx256m --add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                    <environmentVariables>
                        <JENKINS_MAVEN_AGENT_DISABLED>true</JENKINS_MAVEN_AGENT_DISABLED>
                    </environmentVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <excludes>**/its/**</excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <includes>**/its/**</includes>
                            <systemPropertyVariables>
                                <project.version>${project.version}</project.version>
                                <maven.multiModuleProjectDirectory>${maven.multiModuleProjectDirectory}</maven.multiModuleProjectDirectory>
                            </systemPropertyVariables>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
                <executions>
                    <execution>
                        <id>default-install</id>
                        <phase>pre-integration-test</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
